--- a/Desafios/dsf012/style.css
+++ b/Desafios/dsf012/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-  @import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
 
 :root {
     --fonte-titulo: 'Passion One', cursive;
@@ -16,6 +16,7 @@
 body, html{
     background-color: white;
     min-height: 100vh; 
+    font-family: var(--fonte-padrao);
 }
 
 header {
@@ -34,7 +35,6 @@ header > h1 {
 }
 
 header > p {
-    font-family: var(--fonte-padrao);
     font-size: 1.5;
     font-weight: lighter;
     padding-bottom: 70px;
@@ -55,6 +55,12 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte-corpo);
+    font-size: 4vw;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -65,11 +71,28 @@ section.normal{
 section.imagem {
     background-color: rgb(34, 34, 34);
     color:white;
+    background-size: cover;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.596);
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.432);
-    width: 400px;
+    background-color: rgba(0, 0, 0, 0.801);
+    display: inline-block;
+    padding: 5px;
+    text-shadow: 1px 1px 0px black;
+    border-radius: 3%;
+}
+
+section#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+  
+}
+
+section#img02 {
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
 }
 
 footer {
